--- a/environment.yml
+++ b/environment.yml
@@ -17,10 +17,13 @@ dependencies:
   - rtree=1.3.0
   - pyproj=3.7.0
   - shapely=2.0.6
+  - pyarrow=15.0.2
   - pyvespa=0.54.0
   - tenacity=9.0.0
   - xmltodict=0.14.2
-  - epitran=1.26.0
   - orjson=3.10.15
   - numpy=2.2.1
   - panphon=0.21.2
+  - pip
+  - pip:
+      - epitran==1.26.0
