--- a/environment.yml
+++ b/environment.yml
@@ -4,26 +4,27 @@ channels:
   - defaults
 dependencies:
   - python=3.11
-  - httpx=0.28.1
-  - fastapi=0.115.6
-  - pydantic=2.10.4
-  - boto3=1.35.91
-  - kubernetes=31.0.0
-  - ijson=3.3.0
-  - requests=2.32.3
-  - botocore=1.35.91
-  - mbutil=0.3.0
-  - pillow=11.0.0
-  - rtree=1.3.0
-  - pyproj=3.7.0
-  - shapely=2.0.6
-  - pyarrow=15.0.2
-  - pyvespa=0.54.0
-  - tenacity=9.0.0
-  - xmltodict=0.14.2
-  - orjson=3.10.15
-  - numpy=2.2.1
-  - panphon=0.21.2
-  - pip
+  - numpy~=2.2.1
+  - orjson~=3.10.15
+  - pyarrow~=15.0.2
+  - pandas
+  - requests~=2.32.3
+  - fastapi~=0.115.6
+  - pydantic~=2.10.4
+  - pillow~=11.0.0
+  - shapely~=2.0.6
+  - pyproj~=3.7.0
+  - Rtree~=1.3.0
+  - boto3~=1.35.91
+  - botocore~=1.35.91
+  - mbutil~=0.3.0
+  - tenacity~=9.0.0
+  - xmltodict~=0.14.2
+  - ijson~=3.3.0
+
   - pip:
       - epitran==1.26.0
+      - panphon==0.21.2
+      - kubernetes==31.0.0
+      - pyvespa==0.54.0
+      - httpx==0.28.1
