--- a/environment.yml
+++ b/environment.yml
@@ -21,6 +21,8 @@ dependencies:
   - tenacity~=9.0.0
   - xmltodict~=0.14.2
   - ijson~=3.3.0
+  - tqdm~=4.66.4
+  - pip
 
   - pip:
       - epitran==1.26.0
