--- a/environment.yml
+++ b/environment.yml
@@ -1,33 +1,213 @@
-name: whg-env
+name: whg
 channels:
   - conda-forge
   - defaults
 dependencies:
+  - conda-forge/linux-64::_libgcc_mutex==0.1=conda_forge
+  - conda-forge/noarch::ca-certificates==2025.7.14=hbd8a1cb_0
+  - conda-forge/linux-64::ld_impl_linux-64==2.44=h1423503_1
+  - conda-forge/linux-64::libgomp==15.1.0=h767d61c_3
+  - conda-forge/noarch::python_abi==3.11=8_cp311
+  - conda-forge/noarch::tzdata==2025b=h78e105d_0
+  - conda-forge/linux-64::_openmp_mutex==4.5=2_gnu
+  - conda-forge/linux-64::libgcc==15.1.0=h767d61c_3
+  - conda-forge/linux-64::aws-c-common==0.10.6=hb9d3cd8_0
+  - conda-forge/linux-64::c-ares==1.34.5=hb9d3cd8_0
+  - conda-forge/linux-64::libbrotlicommon==1.1.0=hb9d3cd8_3
+  - conda-forge/linux-64::libdeflate==1.24=h86f0d12_0
+  - conda-forge/linux-64::libexpat==2.7.1=hecca717_0
+  - conda-forge/linux-64::libffi==3.4.6=h2dba641_1
+  - conda-forge/linux-64::libgcc-ng==15.1.0=h69a702a_3
+  - conda-forge/linux-64::libgfortran5==15.1.0=hcea5267_3
+  - conda-forge/linux-64::libiconv==1.18=h4ce23a2_1
+  - conda-forge/linux-64::libjpeg-turbo==3.1.0=hb9d3cd8_0
+  - conda-forge/linux-64::liblzma==5.8.1=hb9d3cd8_2
+  - conda-forge/linux-64::libnl==3.11.0=hb9d3cd8_0
+  - conda-forge/linux-64::libnsl==2.0.1=hb9d3cd8_1
+  - conda-forge/linux-64::libstdcxx==15.1.0=h8f9b012_3
+  - conda-forge/linux-64::libutf8proc==2.10.0=h202a827_0
+  - conda-forge/linux-64::libuv==1.51.0=hb9d3cd8_0
+  - conda-forge/linux-64::libwebp-base==1.6.0=hd42ef1d_0
+  - conda-forge/linux-64::libzlib==1.3.1=hb9d3cd8_2
+  - conda-forge/linux-64::ncurses==6.5=h2d0b736_3
+  - conda-forge/linux-64::oniguruma==6.9.10=hb9d3cd8_0
+  - conda-forge/linux-64::openssl==3.5.1=h7b32b05_0
+  - conda-forge/linux-64::pthread-stubs==0.4=hb9d3cd8_1002
+  - conda-forge/linux-64::xorg-libxau==1.0.12=hb9d3cd8_0
+  - conda-forge/linux-64::xorg-libxdmcp==1.1.5=hb9d3cd8_0
+  - conda-forge/linux-64::yaml==0.2.5=h280c20c_3
+  - conda-forge/linux-64::attr==2.5.1=h166bdaf_1
+  - conda-forge/linux-64::aws-c-cal==0.8.1=h1a47875_3
+  - conda-forge/linux-64::aws-c-compression==0.3.0=h4e1184b_5
+  - conda-forge/linux-64::aws-c-sdkutils==0.2.2=h4e1184b_0
+  - conda-forge/linux-64::aws-checksums==0.2.2=h4e1184b_4
+  - conda-forge/linux-64::bzip2==1.0.8=h4bc722e_7
+  - conda-forge/linux-64::geos==3.13.1=h97f6797_0
+  - conda-forge/linux-64::gflags==2.2.2=h5888daf_1005
+  - jq
+  - conda-forge/linux-64::keyutils==1.6.1=h166bdaf_0
+  - conda-forge/linux-64::lerc==4.0.0=h0aef613_1
+  - conda-forge/linux-64::libabseil==20240722.0=cxx17_hbbce691_4
+  - conda-forge/linux-64::libbrotlidec==1.1.0=hb9d3cd8_3
+  - conda-forge/linux-64::libbrotlienc==1.1.0=hb9d3cd8_3
+  - conda-forge/linux-64::libedit==3.1.20250104=pl5321h7949ede_0
+  - conda-forge/linux-64::libev==4.33=hd590300_2
+  - conda-forge/linux-64::libevent==2.1.12=hf998b51_1
+  - conda-forge/linux-64::libgfortran==15.1.0=h69a702a_3
+  - conda-forge/linux-64::libgpg-error==1.55=h3f2d84a_0
+  - conda-forge/linux-64::libpng==1.6.50=h943b412_0
+  - conda-forge/linux-64::libspatialindex==2.1.0=he57a185_0
+  - conda-forge/linux-64::libssh2==1.11.1=hcf80075_0
+  - conda-forge/linux-64::libstdcxx-ng==15.1.0=h4852527_3
+  - conda-forge/linux-64::libuuid==2.38.1=h0b41bf4_0
+  - conda-forge/linux-64::libxcb==1.17.0=h8a09558_0
+  - conda-forge/linux-64::libxcrypt==4.4.36=hd590300_1
+  - conda-forge/linux-64::lz4-c==1.10.0=h5888daf_1
+  - conda-forge/linux-64::readline==8.2=h8c095d6_2
+  - conda-forge/linux-64::s2n==1.5.11=h072c03f_0
+  - conda-forge/linux-64::snappy==1.2.2=h03e3b7b_0
+  - conda-forge/linux-64::tk==8.6.13=noxft_hd72426e_102
+  - conda-forge/linux-64::zstd==1.5.7=hb8e6e7a_2
+  - conda-forge/linux-64::aws-c-io==0.15.3=h173a860_6
+  - conda-forge/linux-64::glog==0.7.1=hbabe93e_0
+  - conda-forge/linux-64::icu==75.1=he02047a_0
+  - conda-forge/linux-64::krb5==1.21.3=h659f571_0
+  - conda-forge/linux-64::libcap==2.75=h39aace5_0
+  - conda-forge/linux-64::libcrc32c==1.1.2=h9c3ff4c_0
+  - conda-forge/linux-64::libfreetype6==2.13.3=h48d6fc4_1
+  - conda-forge/linux-64::libgcrypt-lib==1.11.1=hb9d3cd8_0
+  - conda-forge/linux-64::libnghttp2==1.64.0=h161d5f1_0
+  - conda-forge/linux-64::libopenblas==0.3.30=pthreads_h94d23a6_1
+  - conda-forge/linux-64::libprotobuf==5.28.3=h6128344_1
+  - conda-forge/linux-64::libre2-11==2024.07.02=hbbce691_2
+  - conda-forge/linux-64::libthrift==0.21.0=h0e7cc3e_0
+  - conda-forge/linux-64::libtiff==4.7.0=hf01ce69_5
+  - conda-forge/linux-64::aws-c-event-stream==0.5.0=h7959bf6_11
+  - conda-forge/linux-64::aws-c-http==0.9.2=hefd7a92_4
+  - conda-forge/linux-64::lcms2==2.17=h717163a_0
+  - conda-forge/linux-64::libblas==3.9.0=32_h59b9bed_openblas
+  - conda-forge/linux-64::libcurl==8.14.1=h332b0f4_0
+  - conda-forge/linux-64::libfreetype==2.13.3=ha770c72_1
+  - conda-forge/linux-64::libsqlite==3.50.3=hee844dc_1
+  - conda-forge/linux-64::libsystemd0==257.7=h4e0b6ca_0
+  - conda-forge/linux-64::libudev1==257.7=hbe16f8c_0
+  - conda-forge/linux-64::libxml2==2.13.8=h4bc477f_0
+  - conda-forge/linux-64::openjpeg==2.5.3=h5fbd93e_0
+  - conda-forge/linux-64::orc==2.0.3=h12ee42a_2
+  - conda-forge/linux-64::re2==2024.07.02=h9925aae_2
+  - conda-forge/linux-64::aws-c-auth==0.8.1=h205f482_0
+  - conda-forge/linux-64::aws-c-mqtt==0.11.0=h11f4f37_12
+  - conda-forge/linux-64::freetype==2.13.3=ha770c72_1
+  - conda-forge/linux-64::libcblas==3.9.0=32_he106b2a_openblas
+  - conda-forge/linux-64::libgrpc==1.67.1=h25350d4_2
+  - conda-forge/linux-64::liblapack==3.9.0=32_h7ac8fdf_openblas
+  - conda-forge/linux-64::libllvm17==17.0.6=ha7bfdaf_3
   - python=3.11
+  - conda-forge/linux-64::rdma-core==58.0=h5888daf_0
+  - conda-forge/linux-64::sqlite==3.50.3=heff268d_1
+  - aiofiles
+  - conda-forge/linux-64::aws-c-s3==0.7.9=he1b24dc_1
+  - conda-forge/linux-64::brotli-python==1.1.0=py311hfdbb021_3
+  - conda-forge/noarch::certifi==2025.7.14=pyhd8ed1ab_0
+  - conda-forge/noarch::charset-normalizer==3.4.2=pyhd8ed1ab_0
+  - conda-forge/noarch::click==8.2.1=pyh707e725_0
+  - conda-forge/noarch::colorama==0.4.6=pyhd8ed1ab_1
+  - conda-forge/noarch::hpack==4.1.0=pyhd8ed1ab_0
+  - conda-forge/linux-64::httptools==0.6.4=py311h9ecbd09_0
+  - conda-forge/noarch::hyperframe==6.1.0=pyhd8ed1ab_0
+  - conda-forge/noarch::idna==3.10=pyhd8ed1ab_1
+  - ijson~=3.3.0
+  - conda-forge/noarch::jmespath==1.0.1=pyhd8ed1ab_1
+  - conda-forge/linux-64::libgoogle-cloud==2.34.0=h2b5623c_0
+  - conda-forge/linux-64::markupsafe==3.0.2=py311h2dc5d0c_1
+  - mbutil~=0.3.0
+  - conda-forge/noarch::mdurl==0.1.2=pyhd8ed1ab_1
   - numpy~=2.2.1
   - orjson~=3.10.15
-  - pyarrow~=15.0.2
-  - pandas
-  - requests~=2.32.3
-  - fastapi~=0.115.6
-  - pydantic~=2.10.4
   - pillow~=11.0.0
-  - shapely~=2.0.6
-  - pyproj~=3.7.0
-  - Rtree~=1.3.0
-  - boto3~=1.35.91
-  - botocore~=1.35.91
-  - mbutil~=0.3.0
+  - conda-forge/linux-64::proj==9.6.2=h0054346_0
+  - conda-forge/noarch::pycparser==2.22=pyh29332c3_1
+  - conda-forge/noarch::pygments==2.19.2=pyhd8ed1ab_0
+  - conda-forge/noarch::pysocks==1.7.1=pyha55dd90_7
+  - conda-forge/noarch::python-dotenv==1.1.1=pyhe01879c_0
+  - conda-forge/linux-64::python-duckdb==1.3.2=py311h1ddb823_0
+  - conda-forge/noarch::python-multipart==0.0.20=pyhff2d567_0
+  - conda-forge/noarch::python-tzdata==2025.2=pyhd8ed1ab_0
+  - conda-forge/noarch::pytz==2025.2=pyhd8ed1ab_0
+  - conda-forge/linux-64::pyyaml==6.0.2=py311h2dc5d0c_2
+  - rtree~=1.3.0
+  - conda-forge/noarch::setuptools==80.9.0=pyhff2d567_0
+  - conda-forge/noarch::shellingham==1.5.4=pyhd8ed1ab_1
+  - conda-forge/noarch::six==1.17.0=pyhe01879c_1
+  - conda-forge/noarch::sniffio==1.3.1=pyhd8ed1ab_1
   - tenacity~=9.0.0
+  - conda-forge/noarch::typing_extensions==4.14.1=pyhe01879c_0
+  - conda-forge/linux-64::ucx==1.17.0=h53fb5aa_4
+  - conda-forge/linux-64::uvloop==0.21.0=py311h9ecbd09_1
+  - conda-forge/linux-64::websockets==15.0.1=py311haee01d2_1
+  - conda-forge/noarch::wheel==0.45.1=pyhd8ed1ab_1
   - xmltodict~=0.14.2
-  - ijson~=3.3.0
-  - tqdm~=4.66.4
-  - duckdb>=0.10.0
-  - uvicorn
-  - aiofiles
-  - jq
-  - tree
+  - conda-forge/linux-64::aws-crt-cpp==0.29.9=he0e7f3f_2
+  - conda-forge/linux-64::cffi==1.17.1=py311hf29c0ef_0
+  - conda-forge/noarch::dnspython==2.7.0=pyhff2d567_1
+  - duckdb[version='>=0.10.0']
+  - conda-forge/noarch::exceptiongroup==1.3.0=pyhd8ed1ab_0
+  - conda-forge/noarch::h11==0.16.0=pyhd8ed1ab_0
+  - conda-forge/noarch::h2==4.2.0=pyhd8ed1ab_0
+  - conda-forge/noarch::jinja2==3.1.6=pyhd8ed1ab_0
+  - conda-forge/linux-64::libgoogle-cloud-storage==2.34.0=h0121fbd_0
+  - conda-forge/noarch::markdown-it-py==3.0.0=pyhd8ed1ab_1
   - pip
+  - pyproj~=3.7.0
+  - conda-forge/noarch::python-dateutil==2.9.0.post0=pyhe01879c_2
+  - shapely~=2.0.6
+  - tqdm~=4.66.4
+  - conda-forge/noarch::typer-slim==0.16.0=pyhe01879c_0
+  - conda-forge/noarch::typing-extensions==4.14.1=h4440ef1_0
+  - conda-forge/noarch::annotated-types==0.7.0=pyhd8ed1ab_1
+  - conda-forge/noarch::anyio==4.9.0=pyh29332c3_0
+  - conda-forge/linux-64::aws-sdk-cpp==1.11.489=h4d475cb_0
+  - conda-forge/noarch::email-validator==2.2.0=pyhd8ed1ab_1
+  - pandas
+  - conda-forge/linux-64::pydantic-core==2.27.2=py311h9e33e62_0
+  - conda-forge/noarch::rich==14.1.0=pyhe01879c_0
+  - uvicorn
+  - conda-forge/linux-64::zstandard==0.23.0=py311h9ecbd09_2
+  - conda-forge/noarch::email_validator==2.2.0=hd8ed1ab_1
+  - conda-forge/noarch::httpcore==1.0.9=pyh29332c3_0
+  - conda-forge/linux-64::libarrow==15.0.2=h2a2a254_55_cpu
+  - pydantic~=2.10.4
+  - conda-forge/noarch::rich-toolkit==0.14.8=pyhe01879c_0
+  - conda-forge/noarch::starlette==0.46.2=pyh81abbef_0
+  - conda-forge/noarch::typer-slim-standard==0.16.0=hf964461_0
+  - conda-forge/noarch::urllib3==2.5.0=pyhd8ed1ab_0
+  - conda-forge/linux-64::watchfiles==1.1.0=py311h9e33e62_0
+  - botocore~=1.35.91
+  - conda-forge/noarch::httpx==0.28.1=pyhd8ed1ab_0
+  - conda-forge/linux-64::libarrow-acero==15.0.2=h7599340_55_cpu
+  - conda-forge/linux-64::libarrow-flight==15.0.2=h1f524f1_55_cpu
+  - conda-forge/linux-64::libarrow-gandiva==15.0.2=ha6a4c6a_55_cpu
+  - conda-forge/linux-64::libparquet==15.0.2=h3fef80f_55_cpu
+  - requests~=2.32.3
+  - conda-forge/noarch::typer==0.16.0=pyh167b9f4_0
+  - conda-forge/noarch::uvicorn-standard==0.35.0=h31011fe_0
+  - conda-forge/noarch::fastapi-cli==0.0.8=pyhd8ed1ab_0
+  - conda-forge/linux-64::libarrow-dataset==15.0.2=h7599340_55_cpu
+  - conda-forge/linux-64::libarrow-flight-sql==15.0.2=h79716be_55_cpu
+  - conda-forge/noarch::s3transfer==0.10.4=pyhd8ed1ab_1
+  - boto3~=1.35.91
+  - fastapi~=0.115.6
+  - conda-forge/linux-64::libarrow-substrait==15.0.2=h79716be_55_cpu
+  - pyarrow~=15.0.2
+  - tree
+  - make
+  - cmake
+  - compilers
+  - boost
+  - boost-cpp
+  - expat
+  - zlib
+  - nlohmann_json
 
   - pip:
       - epitran==1.26.0
@@ -37,4 +217,3 @@ dependencies:
       - httpx==0.28.1
       - msgpack==1.0.8
       - msgpack_numpy==0.4.8
-      - osmium
