--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -31,6 +31,7 @@ spec:
             - "/bin/sh"
             - "-c"
             - |
+              echo "ID: $(id)"
               echo "Directory listing of /ix1/whcdh:" &&
               ls -la /ix1/whcdh
               export KUBECONFIG=/root/.kube/config &&
