--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -13,8 +13,7 @@ service:
   nodePort: 30080
 
 securityContext:
-#  fsGroup: 53644
-  runAsUser: 53644 #1001
+  runAsUser: 1001
   runAsGroup: 1001
 
 sizeLimit: 1Gi
