--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -13,7 +13,7 @@ service:
   nodePort: 30080
 
 securityContext:
-  runAsUser: 1001
+  runAsUser: 53644 # 1001
   runAsGroup: 1001
   fsGroup: 16604
   fsGroupChangePolicy: "Always"
