--- a/deployment/templates/deployment-pv-pvc.yaml
+++ b/deployment/templates/deployment-pv-pvc.yaml
@@ -9,14 +9,14 @@ spec:
   accessModes:
     - ReadWriteMany
   persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: /minikube-whcdh
-{{/*  nfs:*/}}
-{{/*    path: /mnt/tank/crc/whcdh*/}}
-{{/*    server: ix1.crc.pitt.edu*/}}
-{{/*    readOnly: false*/}}
-{{/*  mountOptions:*/}}
-{{/*    - nfsvers=4.2*/}}
+{{/*  hostPath:*/}}
+{{/*    path: /minikube-whcdh*/}}
+  nfs:
+    path: /mnt/tank/crc/whcdh
+    server: ix1.crc.pitt.edu
+    readOnly: false
+  mountOptions:
+    - nfsvers=4.2
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
