--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -21,6 +21,23 @@ spec:
         fsGroup: {{ .Values.securityContext.fsGroup }}
         fsGroupChangePolicy: {{ .Values.securityContext.fsGroupChangePolicy | default "Always" }}
       initContainers:
+        - name: fix-permissions
+          image: busybox:latest
+          command: ['sh', '-c']
+          args:
+            - |
+              echo "Init container ID: $(id)"
+              echo "Listing /ix1/whcdh:"
+              ls -la /ix1/whcdh/ || true
+              echo "Attempting to create test directory:"
+              mkdir -p /ix1/whcdh/data/test || true
+              ls -la /ix1/whcdh/data || true
+          volumeMounts:
+            - name: ix1-whcdh-volume
+              mountPath: /ix1/whcdh
+          securityContext:
+            runAsUser: 0  # Run as root to diagnose
+            runAsGroup: 0
         - name: git-clone
           image: alpine/git:latest
           command: ["git", "clone", "https://github.com/WorldHistoricalGazetteer/place", "/apps/repository"]
