--- a/deployment/templates/deployment-pv-pvc.yaml
+++ b/deployment/templates/deployment-pv-pvc.yaml
@@ -1,31 +1,33 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: {{ .Values.nfs.pv.name }}
+  name: ix1-whcdh-pv
 spec:
   capacity:
-    storage: {{ .Values.nfs.pv.capacity }}
+    storage: 5Ti
   volumeMode: Filesystem
   accessModes:
-{{ toYaml .Values.nfs.pv.accessModes | indent 4 }}
-  persistentVolumeReclaimPolicy: {{ .Values.nfs.pv.reclaimPolicy }}
-  nfs:
-    server: {{ .Values.nfs.server }}
-    path: {{ .Values.nfs.path }}
-    readOnly: {{ .Values.nfs.readOnly }}
-  mountOptions:
-{{ toYaml .Values.nfs.mountOptions | indent 4 }}
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  hostPath:
+    path: /minikube-whcdh
+{{/*  nfs:*/}}
+{{/*    path: /mnt/tank/crc/whcdh*/}}
+{{/*    server: ix1.crc.pitt.edu*/}}
+{{/*    readOnly: false*/}}
+{{/*  mountOptions:*/}}
+{{/*    - nfsvers=4.2*/}}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.nfs.pvc.name }}
+  name: ix1-whcdh-pvc
   namespace: {{ .Release.Namespace }}
 spec:
   accessModes:
-{{ toYaml .Values.nfs.pv.accessModes | indent 4 }}
+    - ReadWriteMany
   resources:
     requests:
-      storage: {{ .Values.nfs.pv.capacity }}
-  volumeName: {{ .Values.nfs.pv.name }}
-  storageClassName: {{ .Values.nfs.pvc.storageClassName | quote }}
+      storage: 5Ti
+  volumeName: ix1-whcdh-pv
+  storageClassName: ""  # <-- REQUIRED for static binding
