--- a/deployment/templates/deployment-pv-pvc.yaml
+++ b/deployment/templates/deployment-pv-pvc.yaml
@@ -1,33 +1,31 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: ix1-whcdh-pv
+  name: {{ .Values.nfs.pv.name }}
 spec:
   capacity:
-    storage: 5Ti
+    storage: {{ .Values.nfs.pv.capacity }}
   volumeMode: Filesystem
   accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
-  hostPath:
-    path: /minikube-whcdh
-{{/*  nfs:*/}}
-{{/*    path: /mnt/tank/crc/whcdh*/}}
-{{/*    server: ix1.crc.pitt.edu*/}}
-{{/*    readOnly: false*/}}
-{{/*  mountOptions:*/}}
-{{/*    - nfsvers=4.2*/}}
+{{ toYaml .Values.nfs.pv.accessModes | indent 4 }}
+  persistentVolumeReclaimPolicy: {{ .Values.nfs.pv.reclaimPolicy }}
+  nfs:
+    server: {{ .Values.nfs.server }}
+    path: {{ .Values.nfs.path }}
+    readOnly: {{ .Values.nfs.readOnly }}
+  mountOptions:
+{{ toYaml .Values.nfs.mountOptions | indent 4 }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ix1-whcdh-pvc
+  name: {{ .Values.nfs.pvc.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   accessModes:
-    - ReadWriteMany
+{{ toYaml .Values.nfs.pv.accessModes | indent 4 }}
   resources:
     requests:
-      storage: 5Ti
-  volumeName: ix1-whcdh-pv
-  storageClassName: ""  # <-- REQUIRED for static binding
+      storage: {{ .Values.nfs.pv.capacity }}
+  volumeName: {{ .Values.nfs.pv.name }}
+  storageClassName: {{ .Values.nfs.pvc.storageClassName | quote }}
