--- a/deployment/templates/deployment-pv-pvc.yaml
+++ b/deployment/templates/deployment-pv-pvc.yaml
@@ -1,27 +1,27 @@
 apiVersion: v1
 kind: PersistentVolume
 metadata:
-  name: ix1-whcdh-pv
+  name: {{ .Values.nfs.pv.name }}
 spec:
   capacity:
-    storage: 5Ti
+    storage: {{ .Values.nfs.pv.capacity }}
   volumeMode: Filesystem
   accessModes:
-    - ReadWriteMany
-  persistentVolumeReclaimPolicy: Retain
+{{ toYaml .Values.nfs.pv.accessModes | indent 4 }}
+  persistentVolumeReclaimPolicy: {{ .Values.nfs.pv.reclaimPolicy | default "Retain" }}
   hostPath:
-    path: /minikube-whcdh
+    path: {{ .Values.nfs.pv.hostPath }}
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: ix1-whcdh-pvc
+  name: {{ .Values.nfs.pvc.name }}
   namespace: {{ .Release.Namespace }}
 spec:
   accessModes:
-    - ReadWriteMany
+{{ toYaml .Values.nfs.pv.accessModes | indent 4 }}
   resources:
     requests:
-      storage: 5Ti
-  volumeName: ix1-whcdh-pv
-  storageClassName: ""  # <-- REQUIRED for static binding
+      storage: {{ .Values.nfs.pv.capacity }}  # Match PV size
+  volumeName: {{ .Values.nfs.pv.name }}  # <-- REQUIRED for static binding
+  storageClassName: {{ .Values.nfs.pvc.storageClassName | default "" }}  # <-- REQUIRED for static binding
