--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -38,10 +38,11 @@ spec:
             - "-c"
             - |
               echo "ID: $(id)" &&
-              # echo "Directory listing of /ix1/whcdh/data:" &&
-              # ls -la /ix1/whcdh/data
-              echo "Touching a test file in /ix1/whcdh/data" &&
+              echo "Creating a test file in /ix1/whcdh/data" &&
               touch /ix1/whcdh/data/test-file.txt &&
+              ls -la /ix1/whcdh/data &&
+              echo "Deleting that test file in /ix1/whcdh/data" &&
+              rm /ix1/whcdh/data/test-file.txt &&
               ls -la /ix1/whcdh/data
               export KUBECONFIG=/root/.kube/config &&
               cd /apps/repository &&
