--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -27,7 +27,7 @@ service:
 securityContext:
   runAsUser: 1001             # UID the container runs as inside the pod
   runAsGroup: 1001            # GID the container runs as inside the pod
-  fsGroup: 16604              # Filesystem group for NFS mount (whcdh group on ix1)
+  fsGroup: 16604              # Filesystem group for NFS mount (whcdh group on ix1): ALL PODS MUST RUN AS THIS GID TO ACCESS NFS
   fsGroupChangePolicy: "Always" # Ensure fsGroup ownership is applied to mounted volumes
 
 # -----------------------------------------------------------------------------
@@ -53,7 +53,6 @@ nfs:
   # PersistentVolumeClaim settings
   pvc:
     name: ix1-whcdh-pvc         # Name of the PVC in Kubernetes
-    storageClassName: ""        # Empty string required for static PV binding
 
 # -----------------------------------------------------------------------------
 # Optional / external credentials (for things like minikube, HCP, TLS)
