--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -33,10 +33,6 @@ spec:
       containers:
         - name: helm
           image: {{ .Values.image.repository }}:{{ .Values.image.tag }}
-          securityContext:
-            runAsUser: {{ .Values.securityContext.runAsUser | default 1001 }}
-            runAsGroup: {{ .Values.securityContext.runAsGroup | default 1001 }}
-            allowPrivilegeEscalation: true
           command:
             - "/bin/sh"
             - "-c"
@@ -48,7 +44,6 @@ spec:
               echo "Deleting that test file in $PV_MOUNT_ROOT/data" &&
               rm $PV_MOUNT_ROOT/data/test-file.txt &&
               ls -la $PV_MOUNT_ROOT/data &&
-              export KUBECONFIG=/root/.kube/config &&
               cd /apps/repository &&
               chmod +x *.sh &&
               python ./deployment/app/api.py
@@ -56,7 +51,7 @@ spec:
             - containerPort: 8000
           volumeMounts:
             - name: kubeconfig-volume
-              mountPath: /root/.kube
+              mountPath: /apps/repository/.kube
             - name: empty-dir-volume
               mountPath: /apps/repository
             - name: {{ .Values.nfs.pvc.name }}-volume
@@ -64,6 +59,8 @@ spec:
           env:
             - name: PV_MOUNT_ROOT
               value: {{ .Values.nfs.mountRoot }}
+            - name: KUBECONFIG
+              value: /apps/repository/.kube/config
           envFrom:
             - secretRef:
                 name: github-token
