--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -25,8 +25,8 @@ service:
 # Pod security context
 # -----------------------------------------------------------------------------
 securityContext:
-  runAsUser: 0  #1001             # UID the container runs as inside the pod
-  runAsGroup: 0  #1001            # GID the container runs as inside the pod
+  runAsUser: 1001             # UID the container runs as inside the pod
+  runAsGroup: 1001            # GID the container runs as inside the pod
   fsGroup: 16604              # Filesystem group for NFS mount (whcdh group on ix1): ideal, but not strictly required due to exceptional NFS permissions
   fsGroupChangePolicy: "Always" # Ensure fsGroup ownership is applied to mounted volumes
 
