--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -1,4 +1,19 @@
 # -----------------------------------------------------------------------------
+# Node labelling for cluster roles
+# -----------------------------------------------------------------------------
+nodes:
+  minikube:
+    role: control
+    env: dev
+  minikube-m02:
+    role: backend
+  minikube-m03:
+    role: search
+  minikube-m04:
+    role: media
+    tileserver: "true"
+
+# -----------------------------------------------------------------------------
 # Container image settings
 # -----------------------------------------------------------------------------
 image:
