--- a/tileserver/templates/tileserver-gl-deployment.yaml
+++ b/tileserver/templates/tileserver-gl-deployment.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: {{ .Values.namespace }}
   labels:
     tileserver-gl: "true"
-    app: tileserver-gl # Required by tile-api service
+    app: tileserver-gl
 spec:
   replicas: {{ .Values.replicaCount }}
   selector:
@@ -15,7 +15,7 @@ spec:
     metadata:
       labels:
         tileserver-gl: "true"
-        app: tileserver-gl # Required by tile-api service
+        app: tileserver-gl
         tileapi: "true"
     spec:
       affinity: {{ .Values.affinity | toYaml | nindent 8 }}
@@ -29,23 +29,21 @@ spec:
           - sh
           - -c
           - |
-            git init /mnt/shared/{{ .Values.tileserver.git.targetFolder }} && \
-            git config --global --add safe.directory /mnt/shared/src && \
-            cd /mnt/shared/{{ .Values.tileserver.git.targetFolder }} && \
+            git init /mnt/tileserver && \
+            git config --global --add safe.directory /mnt/tileserver && \
+            cd /mnt/tileserver && \
             git remote get-url origin || git remote add origin {{ .Values.tileserver.git.url }} && \
             git config core.sparseCheckout true && \
             echo "{{ .Values.tileserver.git.sourceFolder }}/" >> .git/info/sparse-checkout && \
             git fetch origin main && \
             git reset --hard origin/main && \
-            # Change ownership of mounted directories to the `node` user and group
-            chown -R 999:999 /mnt/shared
-            chown -R 999:999 /mnt/data/tiles
-            chmod -R 775 /mnt/shared
+            chmod -R 775 /mnt/tileserver
           volumeMounts:
             - name: tileserver
-              mountPath: /mnt/shared
+              mountPath: /mnt/tileserver
             - name: tiles
               mountPath: /mnt/data/tiles
+              subPath: tiles
       containers:
       - name: tileserver-gl
         image: {{ .Values.tileserver.image }}:{{ .Values.tileserver.imageTag }}
@@ -54,38 +52,18 @@ spec:
         command: ["bash", "-c"]
         args:
         - |
-          # List mounted directories (for debugging)
-          ls -la \
-            {{ .Values.pv.tileserver.assets.mountPath }} \
-            {{ .Values.pv.tileserver.api.mountPath }} \
-            {{ .Values.pv.tileserver.configs.mountPath }} \
-            {{ .Values.pv.tileserver.reconfiguration.mountPath }} \
-            {{ .Values.pv.tiles.mountPath }}
-          # Merge base-config.json and config.json
-          node {{ .Values.pv.tileserver.reconfiguration.mountPath }}/merge-config.js {{ .Values.pv.tileserver.reconfiguration.mountPath }}/base-config.json {{ .Values.pv.tileserver.configs.mountPath }}/config.json {{ .Values.pv.tiles.mountPath }}
-          # Run Tileserver-GL
-          node /usr/src/app/src/main.js --config {{ .Values.pv.tileserver.configs.mountPath }}/config.json --verbose
+          ls -la /mnt/tileserver /mnt/data/tiles
+          node /mnt/tileserver/reconfiguration/merge-config.js /mnt/tileserver/reconfiguration/base-config.json /mnt/tileserver/configs/config.json /mnt/data/tiles
+          node /usr/src/app/src/main.js --config /mnt/tileserver/configs/config.json --verbose
         workingDir: /usr/src/app
         ports:
         - containerPort: {{ .Values.service.tileserver.port }}
         volumeMounts:
         - name: tiles
-          mountPath: {{ .Values.pv.tiles.mountPath }}
+          mountPath: /mnt/data/tiles
+          subPath: tiles
         - name: tileserver
-          mountPath: {{ .Values.pv.tileserver.api.mountPath }}
-          subPath: {{ .Values.pv.tileserver.api.subPath }}
-        - name: tileserver
-          mountPath: {{ .Values.pv.tileserver.configs.mountPath }}
-          subPath: {{ .Values.pv.tileserver.configs.subPath }}
-        - name: tileserver
-          mountPath: {{ .Values.pv.tileserver.reconfiguration.mountPath }}
-          subPath: {{ .Values.pv.tileserver.reconfiguration.subPath }}
-        - name: tileserver
-          mountPath: {{ .Values.pv.tileserver.assets.mountPath }}
-          subPath: {{ .Values.pv.tileserver.assets.subPath }}
-        - name: tileserver
-          mountPath: {{ .Values.pv.tileserver.mapdata.mountPath }}
-          subPath: {{ .Values.pv.tileserver.mapdata.subPath }}
+          mountPath: /mnt/tileserver
         resources: {{ toYaml .Values.tileserver.resources | nindent 10 }}
         livenessProbe:
           httpGet:
@@ -127,20 +105,13 @@ spec:
         resources: {{ toYaml .Values.tileapi.resources | nindent 10 }}
         volumeMounts:
         - name: tiles
-          mountPath: {{ .Values.pv.tiles.mountPath }}
+          mountPath: /mnt/data/tiles
+          subPath: tiles
         - name: tileserver
-          mountPath: /code/api
-          subPath: {{ .Values.pv.tileserver.api.subPath }}
-        - name: tileserver
-          mountPath: {{ .Values.pv.tileserver.configs.mountPath }}
-          subPath: {{ .Values.pv.tileserver.configs.subPath }}
-        - name: tileserver
-          mountPath: {{ .Values.pv.tileserver.mapdata.mountPath }}
-          subPath: {{ .Values.pv.tileserver.mapdata.subPath }}
+          mountPath: /mnt/tileserver
       volumes:
       - name: tiles
         persistentVolumeClaim:
-          claimName: tiles-pvc
+          claimName: ishi-pvc
       - name: tileserver
-        persistentVolumeClaim:
-          claimName: tileserver-pvc
+        emptyDir: {}
