--- a/deployment/templates/deployment-pv-pvc.yaml
+++ b/deployment/templates/deployment-pv-pvc.yaml
@@ -12,16 +12,19 @@ spec:
   hostPath:
     path: {{ .Values.nfs.pv.hostPath }}
 ---
+{{- range .Values.nfs.pvc.nameSpaces }}
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: {{ .Values.nfs.pvc.name }}
-  namespace: {{ .Release.Namespace }}
+  name: ishi-pvc
+  namespace: {{ . }}
 spec:
   accessModes:
-{{ toYaml .Values.nfs.pv.accessModes | indent 4 }}
+{{ toYaml $.Values.nfs.pv.accessModes | indent 4 }}
   resources:
     requests:
-      storage: {{ .Values.nfs.pv.capacity }}  # Match PV size
-  volumeName: {{ .Values.nfs.pv.name }}  # <-- REQUIRED for static binding
-  storageClassName: ""  # <-- REQUIRED for static binding (template substitution doesn't work here)
+      storage: {{ $.Values.nfs.pv.capacity }}
+  volumeName: {{ $.Values.nfs.pv.name }}
+  storageClassName: ""
+---
+{{- end }}
