--- a/deployment/values.yaml
+++ b/deployment/values.yaml
@@ -69,3 +69,7 @@ nfs:
   # PersistentVolumeClaim settings
   pvc:
     name: ishi-pvc         # Name of the PVC in Kubernetes
+    nameSpaces:            # Namespaces where the PVC should be created
+      - management
+      - tileserver
+      - whg
