--- a/deployment/templates/management-deployment.yaml
+++ b/deployment/templates/management-deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: management-deployment
-  namespace: management
+  namespace: whg
   labels:
     app: gazetteer-management
 spec:
